<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bwf.tuanche.Activity.CarSearchActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--title部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white">

            <ImageView
                android:id="@+id/content_back"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:padding="12dp"
                android:scaleType="center"
                android:src="@mipmap/icon_back"/>

            <EditText
                android:id="@+id/car_search_edtext"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:drawableLeft="@mipmap/search_icon_search"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/car_search_hint"
                android:textSize="@dimen/Loge_carText_14sp"
                android:background="@drawable/shape_search_re"/>

            <TextView
                android:id="@+id/content_search"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="@dimen/Loge_carText_14sp"
                android:text="@string/car_search_text"
                android:gravity="center"
                android:background="@color/white" />
        </LinearLayout>


    <!--热门搜索部分-->
        <LinearLayout
            android:id="@+id/hot_search_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shouzimu_height"
                android:gravity="left"
                android:background="@color/huise">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_brand_search"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/Loge_carText_16sp"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/car_Search_Recy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <!--搜索历史部分-->
        <LinearLayout
            android:id="@+id/hot_search_lin02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shouzimu_height"
                android:gravity="left"
                android:background="@color/huise">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_last_search"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/Loge_carText_16sp"/>
            </RelativeLayout>

            <ListView
                android:id="@+id/last_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

















    </LinearLayout>






</RelativeLayout>
